force-app/main/default/objects/Booking_Verification_Checklist__c/Booking_Verification_Checklist__c.object-meta.xml
<CustomObject>
    <description>Represents a Booking Verification instance for a specific Opportunity/Deal. Created automatically when a deal reaches the Booking Verification stage.</description>
    <label>Booking Verification Checklist</label>
    <nameField>
        <displayFormat>BVC-{0000}</displayFormat>
        <label>Booking Verification Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Verification Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>