force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Business Unit copied from the Opportunity at checklist creation time.</description>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>