force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date and time when all mandatory checklist items were completed and the checklist status was set to Completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>