force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <description>Percentage of checklist items that are marked Complete or Not Applicable out of total items.</description>
    <label>Completion Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>