force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country copied from the Opportunity at checklist creation time. Used with Business Unit to match the BV template.</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>