force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the parent Opportunity/Deal for which this checklist was generated.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Verification Checklists</relationshipLabel>
    <relationshipName>Booking_Verification_Checklists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>