force-app/main/default/objects/Booking_Verification_Checklist__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Booking Verification Template used to generate this checklist.</description>
    <label>Template</label>
    <referenceTo>Booking_Verification_Template__c</referenceTo>
    <relationshipLabel>Generated Checklists</relationshipLabel>
    <relationshipName>Generated_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>