force-app/main/default/objects/Booking_Verification_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Completion_Percentage__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>